refactor: add file upload endpoint
remove File array from DocumentBuilder constructor

make Pictureutils constructor read pictures from upload folder

adjust tests